[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'panda-exchange'
version = '1.0.0'

[[bin]]
name = 'panda-exchange'
path = 'src/main.rs'

[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.panda-exchange-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a857f4f88722419a6781e8810028089112380466'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'a857f4f88722419a6781e8810028089112380466'
