[package]
name = "perml-collections"
version = "0.1.0"
authors = ["Panda"]

[dependencies]
hex-literal = "0.1.0"
parity-codec = { version = "3.5", default-features = false, features = ["derive"]}
sr-std = { git = "https://github.com/paritytech/substrate", default_features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1' }
srml-support = { git = "https://github.com/paritytech/substrate", default_features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'}

[features]
default = ["std"]
std=[
    "parity-codec/std",
    "sr-std/std",
    "srml-support/std",
]
