[package]
name = "perml-matchorders"
version = "0.1.0"
authors = ["Panda"]

[dependencies]
hex-literal = "0.1.0"
parity-codec = { version = "3.5", default-features = false, features = ["derive"]}
parity-codec-derive = { version = "2.0", default-features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1' }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default_features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1' }
sr-std = { git = "https://github.com/paritytech/substrate", default_features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1' }
sr-primitives = { git = "https://github.com/paritytech/substrate", default_features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1' }
srml-support = { git = "https://github.com/paritytech/substrate", default_features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'}
srml-system = { git = "https://github.com/paritytech/substrate", default_features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1' }
srml-balances = { git = "https://github.com/paritytech/substrate", default_features = false, rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1' }
perml-tokens = { path = "../tokens", default_features = false}
perml-pendingorders = { path = "../pendingorders", default_features = false}

[features]
default = ["std"]
std=[
    "parity-codec/std",
    "parity-codec-derive/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-primitives/std",
    "srml-support/std",
    "srml-system/std",
    "srml-balances/std",
    "perml-tokens/std",
    "perml-pendingorders/std",
]
