[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'panda-exchange-runtime-wasm'
version = '1.0.0'

[features]
default = []
#std = ['panda-exchange-runtime/std']

[workspace]
members = []
[dependencies.panda-exchange-runtime]
default-features = false
path = '..'
